<resources>
    <string name="app_name">Avin\'s App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk!</string>
    <string name="my_awesome_apps">My Awesome Apps</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
</resources>
