<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.avinsharma.myappportfolio.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_vertical_margin"
            android:layout_marginBottom="@dimen/linear_layout_vertical_margin">

            <Button
                android:id="@+id/popular_movies_app_launcher"
                style="@style/ButtonPort"
                android:text="@string/popular_movies" />

            <Button
                android:id="@+id/stock_hawk_app_launcher"
                style="@style/ButtonPort"
                android:text="@string/stock_hawk" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_vertical_margin"
            android:layout_marginBottom="@dimen/linear_layout_vertical_margin">

            <Button
                android:id="@+id/build_it_bigger_app_launcher"
                style="@style/ButtonPort"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/material_app_launcher"
                style="@style/ButtonPort"
                android:text="@string/make_your_app_material" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linear_layout_vertical_margin"
            android:layout_marginBottom="@dimen/linear_layout_vertical_margin">

            <Button
                android:id="@+id/go_ubiquitous_app_launcher"
                style="@style/ButtonPort"
                android:text="@string/go_ubiquitous" />

            <Button
                android:id="@+id/capstone_app_launcher"
                style="@style/ButtonPort"
                android:background="@color/colorAccent"
                android:text="@string/capstone_my_own_app"
                android:textColor="#111" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>